Improve the style of the documentation

--- a/src/SvgBlazor.Docs/wwwroot/index.html
+++ b/src/SvgBlazor.Docs/wwwroot/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>SvgBlazor.Docs</title>
     <base href="/" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700%7cPoppins:300,400,500,600,700,800,900&amp;display=swap" rel="stylesheet">
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="css/atom-one-dark.min.css" rel="stylesheet" />
