Add description to examples : SvgComponent (#98)
Co-authored-by: Aro Wierzbowski <arowierzbowski@gmail.com>

--- a/src/SvgBlazor.Docs/wwwroot/index.html
+++ b/src/SvgBlazor.Docs/wwwroot/index.html
@@ -25,11 +25,7 @@
     <script src="js/highlight.min.js"></script>
     <script src="js/csharp.min.js"></script>
     <script src="js/cshtml-razor.min.js"></script>
-    <script>
-        window.highlightCodeSyntax = () => {
-            hljs.highlightAll();
-        };
-    </script>
+    <script src="js/SvgBlazor.Docs.js"></script>
 </body>
 
 </html>
