--- a/src/SvgBlazor.Docs/wwwroot/index.html
+++ b/src/SvgBlazor.Docs/wwwroot/index.html
@@ -14,7 +14,9 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">
+        <img id="loading-icon" src="img/svgblazor_logo.svg"/>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
